Revert "fix(date-picker): usar position: fixed com getBoundingClientRect para escapar do overflow do Storybook"
This reverts commit b9d1f9c9e33a2d1586819610529c74ea45f22525.

--- a/projects/ds-components/date-picker/src/date-picker.component.scss
+++ b/projects/ds-components/date-picker/src/date-picker.component.scss
@@ -84,7 +84,9 @@
 // ---------------------------------------------------------------------------
 
 .date-picker__calendar {
-  position: fixed;
+  position: absolute;
+  top: calc(100% + 4px);
+  left: 0;
   z-index: 9999;
   background: var(--ds-bg-main, #FCFCFC);
   border: 1px solid var(--ds-border, #CCCCCC);
